--- a/package.json
+++ b/package.json
@@ -2,22 +2,48 @@
   "name": "resume-builder",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
+    "msw": "msw init public/",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
+    "axios": "^1.8.4",
+    "docx": "^9.3.0",
+    "file-saver": "^2.0.5",
+    "form-data": "^4.0.2",
+    "formidable": "^3.5.2",
+    "framer-motion": "^12.6.2",
+    "fs": "^0.0.1-security",
+    "groq": "^3.84.0",
+    "groq-sdk": "^0.19.0",
+    "jspdf": "^3.0.1",
+    "mammoth": "^1.9.0",
+    "multer": "^1.4.5-lts.2",
+    "next": "^15.2.4",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
+    "puppeteer": "^24.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "react-icons": "^5.5.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
-    "@eslint/eslintrc": "^3"
+    "msw": "^2.7.3",
+    "tailwindcss": "^4"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
