--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
     "docx": "^9.3.0",
     "file-saver": "^2.0.5",
@@ -36,6 +38,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/react": "19.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "msw": "^2.7.3",
